--- a/index.html
+++ b/index.html
@@ -10,41 +10,43 @@
 
 </head>
 <body>
-  
-  <header>
-    <h1 class="one">Reliable, efficient delivery</h1>
-    <h1 class="two">Powered by Technology</h1>
-  
-    <p>
-      Our Artificial Intelligence powered tools use millions of project data points 
-      to ensure that your project is successful
-    </p>
-  </header>
+  <main>
 
-  <div class="container">
-    <div class="box-cyan">
-      <h3>Supervisor</h3>
-      <p>Monitors activity to identify project roadblocks</p>
-      <img src="images/icon-supervisor.svg" alt="">
-    </div>
+    <header>
+      <h1 class="one">Reliable, efficient delivery</h1>
+      <h1 class="two">Powered by Technology</h1>
     
-    <div class="box-red">
-      <h3>Team Builder</h3>
-      <p>Scans our talent network to create the optimal team for your project</p>
-      <img src="images/icon-team-builder.svg" alt="">
+      <p>
+        Our Artificial Intelligence powered tools use millions of project data points 
+        to ensure that your project is successful
+      </p>
+    </header>
+  
+    <div class="container">
+      <div class="box-cyan">
+        <h3>Supervisor</h3>
+        <p>Monitors activity to identify project roadblocks</p>
+        <img src="images/icon-supervisor.svg" alt="">
+      </div>
+      
+      <div class="box-red">
+        <h3>Team Builder</h3>
+        <p>Scans our talent network to create the optimal team for your project</p>
+        <img src="images/icon-team-builder.svg" alt="">
+      </div>
+  
+      <div class="box-blue">
+        <h3>Karma</h3>
+        <p>Regularly evaluates our talent to ensure quality</p>
+        <img src="images/icon-karma.svg" alt="">
+      </div>
+  
+      <div class="box-orange">
+        <h3>Calculator</h3>
+        <p>Uses data from past projects to provide better delivery estimates</p>
+        <img src="images/icon-calculator.svg" alt="">
+      </div>
     </div>
-
-    <div class="box-blue">
-      <h3>Karma</h3>
-      <p>Regularly evaluates our talent to ensure quality</p>
-      <img src="images/icon-karma.svg" alt="">
-    </div>
-
-    <div class="box-orange">
-      <h3>Calculator</h3>
-      <p>Uses data from past projects to provide better delivery estimates</p>
-      <img src="images/icon-calculator.svg" alt="">
-    </div>
-  </div>
+  </main>
 </body>
 </html>
